[package]
name = "cranelift-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clirc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cranelift-codegen = "0.106.0"
cranelift-module = "0.106.0"
cranelift-native = "0.106.0"
cranelift-object = "0.106.0"
cranelift-reader = "0.106.0"
